# llm_cultural_probe

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml
config/: eval.yaml  models.yaml
data/: README.md
data/processed/: values_norms.jsonl  wvs_filtered_questions.md
data/raw/: F00017093-WVS_Wave_7_India_Csv_v6.0.csv
notebooks/: 00_setup.ipynb  01_build_values_dataset.ipynb  02_clean_wvs_india.ipynb  03_probe_discriminative.ipynb  04_analyze_discriminative_results.ipynb
notebooks/data/processed/: values_norms.jsonl  wvs_india_q1_q26_clean.csv  wvs_india_q1_q26_clean.parquet  wvs_india_q1_q26_sample100.csv  wvs_india_q1_q26_tidy.csv
results/analysis/20251113-104046/: accuracy_by_run_model.csv  accuracy_latest_20251113-102037.csv  easiest_items_20251113-102037.csv  hardest_items_20251113-102037.csv  pairwise_agreement_20251113-102037.csv
src/eval/: metrics.py  prompts.py
src/probing/: discriminative.py  generative.py  multi_turn.py
src/providers/: base.py  gemini_client.py  openai_client.py  openrouter_client.py
src/utils/: cache.py  io.py  rate_limit.py
